# src/main/java/org/smartbar/backoffice/catgories/CategoriesResourceImpl.java
@@ -1,0 +1,48 @@
+package org.smartbar.backoffice.catgories;
+
+import io.smallrye.common.annotation.NonBlocking;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.core.Response;
+import org.smartbar.backoffice.model.Category;
+import org.smartbar.backoffice.resources.CategoriesResource;
+
+
+import java.util.List;
+
+@ApplicationScoped
+@NonBlocking
+public class CategoriesResourceImpl implements CategoriesResource {
+
+//    @Inject
+//    private CategoriesService categoriesService;
+//
+//    public CategoriesResourceImpl(CategoriesService categoriesService){
+//        this.categoriesService = categoriesService;
+//    }
+//
+//    @Override
+//    public Response categoriesCategoryIdDelete(String categoryId) {
+//        return Response.noContent().build();
+//    }
+//
+//    @Override
+//    public Category categoriesCategoryIdGet(String categoryId) {
+//        return new Category().name("Soft Drinks").description("Boissons sans alcool");
+//    }
+//
+//    @Override
+//    public Response categoriesCategoryIdPut(String categoryId, Category category) {
+//        return Response.ok(category).build();
+//    }
+//
+//    @Override
+//    public List<Category> categoriesGet() {
+//        return List.of(categoriesService.get());
+//    }
+//
+//    @Override
+//    public Response categoriesPost(Category category) {
+//        return Response.status(Response.Status.CREATED).entity(category).build();
+//    }
+}
